TypeScript instead JavaScript.

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <script src="{{ url_for('static', filename='script.js') }}"></script>
+  <script src="{{ url_for('static', filename='script.ts') }}"></script>
   <noscript>Sorry, your browser does not support JavaScript!</noscript>
 </body>
 </html>
