rewrote EVERYTHING in an object-oriented style

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-  <script src="{{ url_for('static', filename='script.ts') }}"></script>
+  <script src="{{ url_for('static', filename='./scripts/script.ts') }}"></script>
+
   <noscript>Sorry, your browser does not support JavaScript!</noscript>
 </body>
 </html>
