no time to explain

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,9 @@
 </head>
 
 <body>
-  <script src="{{ url_for('static', filename='./scripts/script.ts') }}"></script>
-
+  <script type="module" src="../static/compiled/scripts/script.js"></script>
   <noscript>Sorry, your browser does not support JavaScript!</noscript>
 </body>
+
+
 </html>
